--- a/06_Object_Oriented_Programming.ipynb
+++ b/06_Object_Oriented_Programming.ipynb
@@ -9,6 +9,8 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Introduction\n",
     "\n",
@@ -18,9 +20,7 @@
     "\n",
     "In the following sections, we will first provide you with a brief overview of the main paradigms in Python. Then, by building Tesla's Model X step by step, we will be illustrating the differences between the paradigms and show that each of them would do the trick.    \n",
     "\n"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
@@ -97,12 +97,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1. Specifying the Model\n",
-    "\n",
-    "__(S: I think this parapgraph can be deleted and instead we could directly start with specifiying the car (as that is also the title of the subchapter), and then we can show the image at the end of this chapter to show how far we've come)__\n",
-    "For any given project it is important to define the final goal and the steps on how to get there. In this specific example of building a car, we will first create a constrcution plan that will later be expandend by attributes and functionalities in oder to derive at the final fully functioning car. To create the construction plan, we need something with which we can link the different attributes and functions of the car. For this, in the procedural paradigm, a variable containing a string with the name of the model is created.\n",
-    "\n",
-    "<img src=\"imgs/06_blueprint_original.png\" width=\"400\">"
+    "### 1. Specifying the Model\n"
    ]
   },
   {
@@ -115,9 +110,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The name of the model under construction is: Model X\n"
+     ]
+    }
+   ],
    "source": [
     "model_name = \"Model X\"\n",
     "\n",
@@ -134,16 +137,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The name of the model under construction is: Model X\n"
+     ]
+    }
+   ],
    "source": [
-    "# since car is not defined, the execution of this code causes an error\n",
-    "def specify_model(model_name):\n",
+    "def specify_model(name):\n",
+    "    model_name = name\n",
     "    print(\"The name of the model under construction is: {}\".format(model_name))\n",
-    "    return car\n",
+    "    return model_name\n",
+    "    \n",
     "\n",
-    "car_model = specify_model(\"Model X\")"
+    "model_name = specify_model(\"Model X\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Model X'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model_name"
    ]
   },
   {
@@ -158,11 +190,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#S proposal\n",
     "class Car:\n",
     "    pass"
    ]
@@ -176,40 +207,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#S proposal\n",
-    "Model_X = Car()\n",
-    "#The name of the model under construction is: Model X"
+    "Model_X = Car()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The name of the model under construction is: <__main__.Car object at 0x7fd8dbe58e80>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"The name of the model under construction is: {}\".format(Model_X))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Old Text: Objects of a class are created using constructors which are special methods for creating instances of a class. The constructor of a class in python is defined by the ````init```` method and is called each time an object is instantiated."
+    "SOME MORE TEXT ABOUT WHY THIS PRINT IS DIFFERENT"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "class Car:\n",
-    "    def __init__(self, model_name):\n",
-    "        print(\"The name of the model under construction is: {}\".format(model_name))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "modelX = Car(\"Model X\")"
+    "So, what do we have so far??... \n",
+    "\n",
+    "<img src=\"imgs/06_blueprint_original.png\" width=\"400\">"
    ]
   },
   {
@@ -218,30 +253,16 @@
    "source": [
     "### 2. Defining the Attributes\n",
     "\n",
-    "<img src=\"imgs/06_blueprint_attributes.png\" width=\"400\">"
+    "INTRODUCTORY SENTENCES"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Procedural"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Creating the Construction Plan\n",
-    "car = 'Model X'\n",
+    "#### Procedural\n",
     "\n",
-    "# Defining the Attributes\n",
-    "car_colors = ['red', 'white', 'black']\n",
-    "car_hp = 120\n",
-    "car_length_m = 3\n",
-    "car_width_m = 1.5"
+    "EXPLAIN WHAT WE'RE DOING"
    ]
   },
   {
@@ -250,7 +271,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Laura's try\n",
     "# Having a look at the Model X first\n",
     "\n",
     "modelX_name = \"Model X\"\n",
@@ -268,53 +288,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# If I now want to have a look at Tesla's Model S I have to specify all the variables again\n",
-    "modelS_name = \"Model S\"\n",
-    "modelS_colors = [\"yellow\", \"black\"]\n",
-    "modelS_hp = 150\n",
-    "modelS_length = 2.5\n",
-    "modelS_width = 1.25\n",
-    "\n",
-    "# And in order to display all of it again I have to write all this code again too\n",
-    "print(\"The {} has the following specifications:\".format(modelS_name))\n",
-    "print(\"Available colours: {}\".format(modelS_colors))\n",
-    "print(\"HP: {}\".format(modelS_hp))\n",
-    "print(\"Length: {}\".format(modelS_length))\n",
-    "print(\"Width: {}\".format(modelS_width))"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "#### Functional\n",
-    "<img src=\"imgs/06_blueprint_functionality.png\" width=\"400\">"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Creating the Construction Plan\n",
-    "car = 'Model X'\n",
     "\n",
-    "# Defining the Attributes\n",
-    "car_colors = ['red', 'white', 'black']\n",
-    "car_hp = 120\n",
-    "car_length_m = 3\n",
-    "car_width_m = 1.5"
+    "EXPLAIN WHAT'S GOING OOON"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,14 +309,14 @@
     "# Clearly this doesn't scale, so a way of approaching this could be to define a function\n",
     "# The function will take the car specific values as inputs\n",
     "\n",
-    "def car_specs(name, colors, hp, length, width):\n",
+    "def car_attr(name, colors, hp, length, width):\n",
     "    \"\"\"\n",
     "    Prints the specifications.\n",
     "    Returns a list containing the car's specifications. \n",
     "\n",
     "    \"\"\"\n",
     "\n",
-    "    car_specs = [name, colors, hp, length, width]\n",
+    "    car_attr = [name, colors, hp, length, width]\n",
     "\n",
     "    print(\"The {} has the following specifications:\".format(name))\n",
     "    print(\"Available colours: {}\".format(colors))\n",
@@ -340,18 +324,29 @@
     "    print(\"Length: {}\".format(length))\n",
     "    print(\"Width: {}\".format(width))\n",
     "\n",
-    "    return car_specs\n",
-    "\n"
+    "    return car_attr"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Model X has the following specifications:\n",
+      "Available colours: ['red', 'white', 'black']\n",
+      "HP: 120\n",
+      "Length: 3\n",
+      "Width: 1.5\n"
+     ]
+    }
+   ],
    "source": [
     "# Now we can use it with the Model X specifications\n",
-    "modelX_specs = car_specs(name=\"Model X\", \n",
+    "modelX_attr = car_attr(name=\"Model X\", \n",
     "                         colors=['red', 'white', 'black'], \n",
     "                         hp=120, \n",
     "                         length=3, \n",
@@ -360,45 +355,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Model X', ['red', 'white', 'black'], 120, 3, 1.5]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "modelX_specs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# And we can also easily use it with the Model S specifications\n",
-    "modelS_specs = car_specs(name=\"Model S\",\n",
-    "                         colors=['yellow', 'black'],\n",
-    "                         hp=150,\n",
-    "                         length=2.5,\n",
-    "                         width=1.25)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "modelS_specs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "modelS_specs"
+    "modelX_attr"
    ]
   },
   {
@@ -424,37 +396,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# L: I think we need to introduce the __init__() function here already... for the attributes. \n",
-    "\n",
-    "class Car:\n",
-    "    # Creating the Construction Plan\n",
-    "    _name = 'Model X'\n",
-    "\n",
-    "    # Defining the Attributes\n",
-    "    _car_colors = ['red', 'white', 'black']\n",
-    "    _car_hp = 120\n",
-    "    _car_length_m = 3\n",
-    "    _car_width_m = 1.5"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#S: proposal to present attributes\n",
     "class Car:\n",
     "    \n",
     "    #class atrributes\n",
-    "    Brand = \"Tesla\"\n",
+    "    brand = \"Tesla\"\n",
     "    \n",
     "    #instance attributes\n",
-    "    def __init__(self, colors, hp, length, width):\n",
+    "    def __init__(self, name, colors, hp, length, width):\n",
+    "        self.name = name\n",
     "        self.colors = colors\n",
     "        self.hp = hp\n",
     "        self.length = length\n",
@@ -463,18 +416,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model X is a car by Tesla.\n",
+      "Model X has a length of 3m and a width of 1.5m.\n"
+     ]
+    }
+   ],
    "source": [
     "#instantiate the Car class with the Model X object\n",
-    "Model_X = Car(['red', 'white', 'black'],120,3,1.5)\n",
+    "Model_X = Car(\"Model X\", ['red', 'white', 'black'],120,3,1.5)\n",
     "\n",
     "# access the class attributes\n",
-    "print(\"Model X is a car by {}.\".format(Model_X.__class__.Brand))\n",
+    "print(\"Model X is a car by {}.\".format(Model_X.brand))\n",
     "\n",
     "# access the instance attributes\n",
     "print(\"Model X has a length of {}m and a width of {}m.\".format( Model_X.length, Model_X.width))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "WRITE STH ABOUT WHAT WE HAVE SO FAR.\n",
+    "\n",
+    "<img src=\"imgs/06_blueprint_attributes.png\" width=\"400\">"
    ]
   },
   {
@@ -550,23 +521,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Car:\n",
-    "    # Creating the Construction Plan\n",
-    "    _name = 'Model X'\n",
-    "\n",
-    "    # Defining the Attributes\n",
-    "    _car_colors = ['red', 'white', 'black']\n",
-    "    _car_hp = 120\n",
-    "    _car_length_m = 3\n",
-    "    _car_width_m = 1.5\n",
+    "    \n",
+    "    #class atrributes\n",
+    "    brand = \"Tesla\"\n",
+    "    \n",
+    "    #instance attributes\n",
+    "    def __init__(self, name, colors, hp, length, width):\n",
+    "        self.name = name\n",
+    "        self.colors = colors\n",
+    "        self.hp = hp\n",
+    "        self.length = length\n",
+    "        self.width = width\n",
+    "        self.state = \"off\"  # find a better initial state\n",
+    "        self.lights = False\n",
     "\n",
     "    # Defining the Functionality\n",
     "    def drive(self):\n",
-    "        print(self._name, 'is driving.')"
+    "        self.state = \"driving\"\n",
+    "        print(\"{} is {}.\".format(self.name, self.state))\n",
+    "\n",
+    "    \n",
+    "    def lights_on(self):\n",
+    "        self.lights = True\n",
+    "        print(self.lights)  # better print statement?\n",
+    "        \n",
+    "    ## Brake\n",
+    "    ## lights off"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Model_X = Car(\"Model X\", ['red', 'white', 'black'],120,3,1.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "Model_X.lights_on()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "WRITE SOMETHING ABOUT WHAT WE HAVE SO FAR\n",
+    "\n",
+    "<img src=\"imgs/06_blueprint_functionality.png\" width=\"400\">"
    ]
   },
   {
@@ -589,6 +609,8 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Sources\n",
     "\n",
@@ -596,9 +618,7 @@
     "\n",
     "https://blog.newrelic.com/engineering/python-programming-styles/  \n",
     "https://hackr.io/blog/procedural-programming   \n"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -624,7 +644,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0-final"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
