--- a/06_Object_Oriented_Programming.ipynb
+++ b/06_Object_Oriented_Programming.ipynb
@@ -593,6 +593,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "What did we do so far???"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Building the Car\n",
     "- Procedural: Car is built and driving instantly\n",
     "- Functional: Car is built instantly but not driving\n",
