--- a/03_Values_Variables_Operators_Functions.ipynb
+++ b/03_Values_Variables_Operators_Functions.ipynb
@@ -263,6 +263,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Delete variables\n",
+    "With the command `del` followed by a variable name, the variable can easily be deleted. It is also possible to delete multiple variables simultaneously."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Declare a variable\n",
+    "maths_grade = 6\n",
+    "print(maths_grade)\n",
+    "\n",
+    "# Delete the variable \n",
+    "del maths_grade"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<a id=\"Values\"></a>\n",
     "# Values\n",
     "\n",
@@ -2195,7 +2217,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
