changed chap "specifying the model"

--- a/06_Object_Oriented_Programming.ipynb
+++ b/06_Object_Oriented_Programming.ipynb
@@ -97,7 +97,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1. Specifying the Model\n"
+    "### 1. Specifying the Model\n",
+    "In this chapter, the exact model to be built is specified.\n",
+    "In principle, it would also be possible to build another model instead of the Model X (for example, the Model S)."
    ]
   },
   {
@@ -105,113 +107,7 @@
    "metadata": {},
    "source": [
     "#### Procedural\n",
-    "In the procedural way, the car model is 'specified' simply through assigning the name of the model, Model X, to a variable of your choice:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The name of the model under construction is: Model X\n"
-     ]
-    }
-   ],
-   "source": [
-    "model_name = \"Model X\"\n",
-    "\n",
-    "print(\"The name of the model under construction is: {}\".format(model_name))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Functional\n",
-    "In the case of the functional paradigm, we create a function called ````specify_model```` that specifies the name of the model by passing the parameter ````model_name````:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The name of the model under construction is: Model X\n"
-     ]
-    }
-   ],
-   "source": [
-    "def specify_model(name):\n",
-    "    model_name = name\n",
-    "    print(\"The name of the model under construction is: {}\".format(model_name))\n",
-    "    return model_name\n",
-    "    \n",
-    "\n",
-    "model_name = specify_model(\"Model X\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Model X'"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model_name"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Object Oriented\n",
-    "And lastly, turning our viewpoint to the object oriented paradigm:\n",
-    "\n",
-    "A class is like a blueprint for an object. Later in this tutorial you will see that it contains all details about the objects that are part of the class. The ````class```` keyword is used to define an empty class ````Car````. Any code that follows the colon and is indented below the class definition is considered part of the class’s body. For now, the ````pass```` statement functions as a placeolder to indicate where code will eventually go. It allows you to run the code without any errors."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class Car:\n",
-    "    pass"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Creating a new object from a class is called instantiating an object. You can instantiate a new Car object by assigning the name of the class, followed by opening and closing parentheses, to the variable name of your object: In this case ````Model_X````. You can create as many objects from a class as you like and assign each of them to a different variable, for instance ````Model_Y````,````Model_S````, etc. Altough they will all be instances from the same class, they represent distinct objects.  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Model_X = Car()"
+    "In the procedural way, the car model is specified simply through assigning the name of the model to a variable of choice:"
    ]
   },
   {
@@ -223,26 +119,116 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The name of the model under construction is: <__main__.Car object at 0x7fd8dbe58e80>\n"
+      "The model under construction is: Model X\n"
      ]
     }
    ],
    "source": [
-    "print(\"The name of the model under construction is: {}\".format(Model_X))"
+    "# specify the model\n",
+    "model = \"Model X\"\n",
+    "\n",
+    "# show the specified model\n",
+    "print(\"The model under construction is: {}\".format(model))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "SOME MORE TEXT ABOUT WHY THIS PRINT IS DIFFERENT"
+    "#### Functional\n",
+    "In the case of the functional paradigm, we create a function called ````specify_model```` and pass the desired name of the model to the function through the parameter called ````model_name````. In the suite of the function the model is specified locally by assigning the passed name of the model to the local variable called ````model````. In this context, local means the variable is only usable inside the suite of the function (the intended lines below the signature/name of the function). In the last step of the function, the value of the variable ````model```` is returned and assigned to the global variable called ````model````. This last step has to be done in order to make the specified model globally available."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The model under construction is: Model X\n"
+     ]
+    }
+   ],
+   "source": [
+    "def specify_model(model_name):\n",
+    "    # specify the model locally\n",
+    "    model = model_name\n",
+    "    # show the specified model\n",
+    "    print(\"The model under construction is: {}\".format(model))\n",
+    "    \n",
+    "    # return the specified model\n",
+    "    return model\n",
+    "    \n",
+    "# specify the model globally\n",
+    "model = specify_model(\"Model X\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So, what do we have so far??... \n",
+    "#### Object Oriented\n",
+    "And lastly, turning our viewpoint to the object oriented paradigm:\n",
+    "\n",
+    "A class is like a blueprint for an object. Later in this tutorial you will see that a class specifies all the details of an object derived from that class. In the code below, the ````class```` keyword is used to define an empty class ````Car````. Any intended code that follows the colon after the class definition represents the body of the class. For now, the ````pass```` statement is used as a placeholder to indicate where code in later steps will eventually go. It allows you to run the code without any errors."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# class definition\n",
+    "class Car:\n",
+    "    # body of the class\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Creating a new object from a class is called \"instantiating an object\". You can instantiate a new object of the class ````Car```` by assigning the name of the class, followed by opening and closing parentheses, to a variable of choice: In this case the new object of the class ````Car```` is instantiated and assigned to the variable ````model_x````. You can create as many objects of a class as you wish and assign each of them to a different variable. Altough they will all be instances of the same class, they represent independent objects, which may have different details."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The model under construction is: <__main__.Car object at 0x104e477c0>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# instantiating the object\n",
+    "model_x = Car()\n",
+    "\n",
+    "# show the specified model\n",
+    "print(\"The model under construction is: {}\".format(model_x))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If you execute the code above, you may wonder why strange characters are displayed instead of the name of the model like in the paradigms shown before. This is due to the fact that we have not yet specified any attributes in the class ````Car````. Therefore, the instantiated objects of this class also have no attributes. This will be rectified in the next chapter of this example. The character string displayed corresponds to the address of the instantiated object in the main memory."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So far, we have only specified which model we want to build.\n",
+    "It's not really a car yet, because it doesn't have any physical attributes like colour or basic functionality like driving.\n",
     "\n",
     "<img src=\"imgs/06_blueprint_original.png\" width=\"400\">"
    ]
@@ -651,7 +637,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
